--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiogram==3.4.2
+aiogram==3.3.0
 fastapi==0.95.2
 uvicorn==0.22.0
 gspread==6.1.2
 oauth2client==4.1.3
 python-dotenv==1.1.0
+pydantic==1.10.9
